@@ -239,7 +239,7 @@ Caml_inline void check_trap_barrier_for_effect
 #endif
 
 #ifdef DEBUG
-static __thread intnat caml_bcodcount;
+static CAMLthread_local intnat caml_bcodcount;
 #endif
 
 static value raise_unhandled_effect;
